fix: audit fixes — 31 findings across code quality, security, performance, testability
high:
- prune firedAlarmKeys to prevent unbounded growth
- guard nil EKEvent.eventIdentifier (crash risk)
- cache upcomingEvents/calendars in AppState (was querying EventKit on every SwiftUI body eval)
- add Escape key handler for fullscreen overlay dismissal

medium:
- @MainActor on AppState, EventMonitor, AppDelegate (Swift 6 concurrency prep)
- weak ref in EventMonitor → AppState (break retain cycle)
- extract fireExpiredSnoozes() (was duplicated in poll + handleFire)
- SnoozedEvent struct replacing tuple
- eventQueue deduplication guard
- log CalendarService.requestAccess() errors
- UserDefaults.register(defaults:) instead of inconsistent nil-checks
- withAnimation completion: replacing hardcoded asyncAfter delays
- only show dismiss/snooze buttons on primary screen (prevent callback races)
- timer tolerance for App Nap (refreshTimer=10s, fireTimer=1s)
- remove CIFilter desaturation layer (continuous GPU compositing, questionable effect)
- app sandbox + hardened runtime + ad-hoc code signing
- make run no longer clears UserDefaults (moved to make run-clean)

low:
- safe URL unwrap in MenuBarView
- remove refreshTick (replaced by @Observable cached properties)
- comment explaining didSet-during-init behavior

tests (19 total):
- AppStateTests: enqueue, dismiss, snooze, queue ordering, deduplication (9 tests)
- EventMonitorTests: reminder types, 60s detection window, scheduling, dedup, snooze expiry (10 tests)
- MockCalendarService + MockOverlayPresenter via CalendarServiceProtocol/OverlayPresenting protocols
- Package.swift + make test via swift test

--- a/project.yml
+++ b/project.yml
@@ -28,3 +28,12 @@ targets:
       path: CalendarOverlay.entitlements
       properties:
         com.apple.security.personal-information.calendars: true
+  CalendarOverlayTests:
+    type: bundle.unit-test
+    platform: macOS
+    sources: [Tests]
+    dependencies:
+      - target: CalendarOverlay
+    settings:
+      base:
+        SWIFT_VERSION: "5.9"
